home-automation/manifests/zigbee2mqtt/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  selector:
    app: zigbee2mqtt

  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
