home-automation/manifests/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: home-automation
  annotations:
    gethomepage.dev/enabled: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/name: Zigbee2MQTT
    gethomepage.dev/description: Zigbee coordinator and device pairing
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: zigbee2mqtt.png
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik

  rules:
    - host: zigbee2mqtt.k8s.internal.smigorx.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
  tls:
    - hosts:
        - zigbee2mqtt.k8s.internal.smigorx.eu
      secretName: zigbee2mqtt-tls
